# yew-setup-2021

./: .gitignore  .prettierignore  Cargo.toml  README.md  bootstrap.js  package.json  styles.css  webpack.base.js  webpack.dev.js  webpack.prod.js
src/: app.rs  constants.rs  entry.rs  lib.rs  message.rs  state.rs
src/components/: container.rs  control.rs  mod.rs
static/: index.html
