[package]
name = "yew_setup_2021"
version = "0.1.3"
authors = ["Hiroki Minagawa <minagawa@tokyo800.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.47"
features = [
  'KeyboardEvent',
  'HtmlInputElement',
]
